AC_PREREQ([2.69])
AC_INIT([qlog], 3.3, [victor.lavaud@gmail.com])
AC_CONFIG_SRCDIR([qlog.hpp])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE()
AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE

# Checks for library functions.

AC_OUTPUT
